1.2 alpha

 New features

  - (__future__) Added docs from the crack ZC docs guys.

  - (__future__) Exposed role management for manager users on
    the default roster:  managers can now "promote" members
    without going to the ZMI.

  - (__future__) Added "custom schema" mechanism for content
    objetcts:  site managers can now define additional
    propertysheets for a content type, which will then be
    reflected in instances created from the type.

  - (__future__) Added simple link extraction / checking for
    textual content.  Link checking also works for Link objects.

  - (__future__) Added "compound content" types (see the
    "dogbowl proposal",
    (http://cmf.zope.org/rqmts/proposals/compounds/compoundproposal.txt).

  - (__future__) Made global actions emitted by ActionsTool
    configurable through-the-web.

  - (__future__) Fleshed out CMFDecor product, which adds Zope
    Page Templates skins to the CMFSite and content objects of
    CMFDefault; added CMFDecor to the core set of CMF products.

    Note that the CMFDecor skin is the one which will be
    receiving all our development focus:  we will fix bugs in the
    DTML skins, but are not likely to invest significant effort
    in upgrading it.

  - (__future__) Added DCWorkflow (through-the-web configurable
    workflows) to the core set of CMF products.

  - Improved tracebacks from broken FSDTMLMethods, which no longer
    indicate that every problem is in RestrictedDTML.

  - Made it possible to add CookieCrumblers in nested folders.
    You can just drop in a cookie crumbler anywhere to change the
    login form for that area of the site.  In fact, now you don't
    have to create a user folder just to change the login
    process.

  - Made Link objects editable via FTP / WebDAV.

  - Merged Chris Withers' FSSQLMethod into CMFCore.

  - Added documentation for installing from CVS.

  - Moved permission checking inside personalize_form to make