@@ -41,26 +41,32 @@ if language is None:
 if rights is None:
     rights = context.Rights()
 
-context.editMetadata( title=title
-                    , description=description
-                    , subject=subject
-                    , contributors=contributors
-                    , effective_date=effective_date
-                    , expiration_date=expiration_date
-                    , format=format
-                    , language=language
-                    , rights=rights
-                    )
+try:  
+    context.editMetadata( title=title
+                        , description=description
+                        , subject=subject
+                        , contributors=contributors
+                        , effective_date=effective_date
+                        , expiration_date=expiration_date
+                        , format=format
+                        , language=language
+                        , rights=rights
+                        )
+    if context.REQUEST.get( 'change_and_edit', 0 ):
+        action_id = 'edit'
+    elif context.REQUEST.get( 'change_and_view', 0 ):
+        action_id = 'view'
+    else:
+        action_id = 'metadata'
 
-if context.REQUEST.get( 'change_and_edit', 0 ):
-    action_id = 'edit'
-elif context.REQUEST.get( 'change_and_view', 0 ):
-    action_id = 'view'
-else:
-    action_id = 'metadata'
-
-action_path = context.getTypeInfo().getActionById( action_id )
-
-context.REQUEST['RESPONSE'].redirect(
-          '%s/%s?portal_status_message=Metadata+changed.'
-            % ( context.absolute_url(), action_path ) )
+    action_path = context.getTypeInfo().getActionById( action_id )
+    context.REQUEST['RESPONSE'].redirect(
+              '%s/%s?portal_status_message=Metadata+changed.'
+                % ( context.absolute_url(), action_path ) )
+except Exception, msg:
+    target_action = context.getTypeInfo().getActionById( 'metadata' )
+    context.REQUEST.RESPONSE.redirect('%s/%s?portal_status_message=%s' % (
+                                                                          context.absolute_url()
+                                                                        , target_action
+                                                                        , msg
+                                                                         ))
